Fix overflow not causing the scrollbar to appear

--- a/electron-vite-vue/src/stylesheets/default.scss
+++ b/electron-vite-vue/src/stylesheets/default.scss
@@ -2,15 +2,13 @@ $neutral-teal: #3EB489;
 $light-teal: #89e2c0;
 $shadow-teal: #aec7b1;
 
+html, body, #app {
+  height: 100%;
+}
+
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: $neutral-teal;
   overflow: hidden;
   margin: 0;
-}
-
-#app {
-  max-width: 600px;
-  max-height: 800px;
-  height: 100vh;
 }
